THT Modul 2 HTML ONLY - nesia ayu (105223010)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
            <i> "And painted portraits have a life of their own that comes from deep in the soul of the painter and where the machine can't go." </i> -Van Gogh 1888  
         </blockquote>
 
-        <a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh?utm_source=chatgpt.com" > Baca Selengkapnya di Wikipedia </a>
+        <a href="https://id.wikipedia.org/wiki/Vincent_van_Gogh" > Baca Selengkapnya di Wikipedia </a>
 
         <br> 
         <h2> Kontribusi Utama </h2>
